{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 33,
  "lineage": "e8412851-41cc-092f-b44e-ceac1273fff5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "ec2-alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:786876608374:listener/app/terraform-lab-alb/959cefc02449bedb/43b0e48da7e5266b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:786876608374:targetgroup/terraform-lab-tg/3c865706560fdf94",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:786876608374:listener/app/terraform-lab-alb/959cefc02449bedb/43b0e48da7e5266b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:786876608374:loadbalancer/app/terraform-lab-alb/959cefc02449bedb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.default-target-group",
            "aws_lb.terraform-lab",
            "aws_security_group.load-balancer",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:786876608374:targetgroup/terraform-lab-tg/3c865706560fdf94",
            "arn_suffix": "targetgroup/terraform-lab-tg/3c865706560fdf94",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:786876608374:targetgroup/terraform-lab-tg/3c865706560fdf94",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-lab-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f0ec56e25c5c902f"
          },
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d86db28ce544c5e0",
            "associate_with_private_ip": "10.0.0.5",
            "association_id": "eipassoc-0e2feacb671b30224",
            "domain": "vpc",
            "id": "eipalloc-0d86db28ce544c5e0",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-04608862fc0526feb",
            "private_dns": "ip-10-0-1-38.eu-west-1.compute.internal",
            "private_ip": "10.0.1.38",
            "public_dns": "ec2-3-255-8-241.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.255.8.241",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terraform-lab-igw",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07355fe79b493752d",
            "arn": "arn:aws:ec2:eu-west-1:786876608374:instance/i-09d836871d59e73ef",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "session-manager",
            "id": "i-09d836871d59e73ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-lab_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-000505fe304fc44dd",
            "private_dns": "ip-10-0-1-107.eu-west-1.compute.internal",
            "private_ip": "10.0.1.107",
            "public_dns": "ec2-54-170-184-175.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.170.184.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-027ac0717f7ab1011",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-07aefcefcd737db8f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f0c09cdcc2eb9aa",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07aefcefcd737db8f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.session-manager",
            "aws_iam_role.session-manager",
            "aws_key_pair.terraform-lab",
            "aws_security_group.ec2",
            "aws_security_group.load-balancer",
            "aws_subnet.public-subnet-1",
            "aws_vpc.terraform-lab-vpc",
            "data.aws_iam_policy_document.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-lab-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:786876608374:internet-gateway/igw-0312d255e664d569c",
            "id": "igw-0312d255e664d569c",
            "owner_id": "786876608374",
            "tags": {
              "Name": "terraform-lab-igw"
            },
            "tags_all": {
              "Name": "terraform-lab-igw"
            },
            "vpc_id": "vpc-0f0ec56e25c5c902f"
          },
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform-lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:786876608374:loadbalancer/app/terraform-lab-alb/959cefc02449bedb",
            "arn_suffix": "app/terraform-lab-alb/959cefc02449bedb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-lab-alb-1104759818.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:786876608374:loadbalancer/app/terraform-lab-alb/959cefc02449bedb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-lab-alb",
            "security_groups": [
              "sg-0264e511eff2dc4a9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f0c09cdcc2eb9aa"
              },
              {
                "subnet_id": "subnet-06cf66c1b17a4aa0a"
              }
            ],
            "subnets": [
              "subnet-04f0c09cdcc2eb9aa",
              "subnet-06cf66c1b17a4aa0a"
            ],
            "vpc_id": "vpc-0f0ec56e25c5c902f",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.load-balancer",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-lab-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d86db28ce544c5e0",
            "connectivity_type": "public",
            "id": "nat-0777cff0ba4f48882",
            "network_interface_id": "eni-04608862fc0526feb",
            "private_ip": "10.0.1.38",
            "public_ip": "3.255.8.241",
            "subnet_id": "subnet-04f0c09cdcc2eb9aa",
            "tags": {
              "Name": "terraform-lab-ngw"
            },
            "tags_all": {
              "Name": "terraform-lab-ngw"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.terraform-lab-igw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-ngw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-062114b049439666b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0777cff0ba4f48882",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-062114b049439666b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.terraform-lab-igw",
            "aws_nat_gateway.terraform-lab-ngw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0312d255e664d569c",
            "id": "r-rtb-0439835f4760bce561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0439835f4760bce56",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-lab-igw",
            "aws_route_table.public-route-table",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:786876608374:route-table/rtb-062114b049439666b",
            "id": "rtb-062114b049439666b",
            "owner_id": "786876608374",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0777cff0ba4f48882",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-terraform-lab-route-table"
            },
            "tags_all": {
              "Name": "private-terraform-lab-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0ec56e25c5c902f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:786876608374:route-table/rtb-0439835f4760bce56",
            "id": "rtb-0439835f4760bce56",
            "owner_id": "786876608374",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0312d255e664d569c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-terraform-lab-route-table"
            },
            "tags_all": {
              "Name": "public-terraform-lab-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0ec56e25c5c902f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07388795887e7820d",
            "route_table_id": "rtb-062114b049439666b",
            "subnet_id": "subnet-0c3c1acc18cfdf1ca"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4e0678da5d4029d",
            "route_table_id": "rtb-062114b049439666b",
            "subnet_id": "subnet-0e3640244013de563"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c680e2b06d72b434",
            "route_table_id": "rtb-0439835f4760bce56",
            "subnet_id": "subnet-04f0c09cdcc2eb9aa"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2b36681bbe82014",
            "route_table_id": "rtb-0439835f4760bce56",
            "subnet_id": "subnet-06cf66c1b17a4aa0a"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:786876608374:security-group/sg-07aefcefcd737db8f",
            "description": "Allows inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07aefcefcd737db8f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0264e511eff2dc4a9"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2_security_group",
            "name_prefix": "",
            "owner_id": "786876608374",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f0ec56e25c5c902f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load-balancer",
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:786876608374:security-group/sg-0264e511eff2dc4a9",
            "description": "Controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0264e511eff2dc4a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load_balancer_security_group",
            "name_prefix": "",
            "owner_id": "786876608374",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f0ec56e25c5c902f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:786876608374:subnet/subnet-0c3c1acc18cfdf1ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3c1acc18cfdf1ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "786876608374",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-terraform-lab-subnet-1"
            },
            "tags_all": {
              "Name": "private-terraform-lab-subnet-1"
            },
            "vpc_id": "vpc-0f0ec56e25c5c902f"
          },
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:786876608374:subnet/subnet-0e3640244013de563",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3640244013de563",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "786876608374",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-terraform-lab-subnet-2"
            },
            "tags_all": {
              "Name": "private-terraform-lab-subnet-2"
            },
            "vpc_id": "vpc-0f0ec56e25c5c902f"
          },
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:786876608374:subnet/subnet-04f0c09cdcc2eb9aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f0c09cdcc2eb9aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "786876608374",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-terraform-lab-subnet-1"
            },
            "tags_all": {
              "Name": "public-terraform-lab-subnet-1"
            },
            "vpc_id": "vpc-0f0ec56e25c5c902f"
          },
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:786876608374:subnet/subnet-06cf66c1b17a4aa0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cf66c1b17a4aa0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "786876608374",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-terraform-lab-subnet-2"
            },
            "tags_all": {
              "Name": "public-terraform-lab-subnet-2"
            },
            "vpc_id": "vpc-0f0ec56e25c5c902f"
          },
          "dependencies": [
            "aws_vpc.terraform-lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-lab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:786876608374:vpc/vpc-0f0ec56e25c5c902f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c0ab72eb0b9c9ae1",
            "default_route_table_id": "rtb-0289807db944810b3",
            "default_security_group_id": "sg-096b1a86e1b0d2d33",
            "dhcp_options_id": "dopt-4adef22c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f0ec56e25c5c902f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0289807db944810b3",
            "owner_id": "786876608374",
            "tags": {
              "Name": "terraform-lab-vpc"
            },
            "tags_all": {
              "Name": "terraform-lab-vpc"
            }
          }
        }
      ]
    }
  ]
}